--- a/index.html
+++ b/index.html
@@ -15,122 +15,84 @@
     <title>Frontend Mentor | Job Listings</title>
   </head>
   <body>
-    <!-- Item Start -->
-    Photosnap New! Featured Senior Frontend Developer 1d ago Full Time USA only
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Senior
-    <!-- Languages -->
-    HTML CSS JavaScript
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    Manage New! Featured Fullstack Developer 1d ago Part Time Remote
-    <!-- Role -->
-    Fullstack
-    <!-- Level -->
-    Midweight
-    <!-- Languages -->
-    Python
-    <!-- Tools -->
-    React
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    Account New! Junior Frontend Developer 2d ago Part Time USA only
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    JavaScript
-    <!-- Tools -->
-    React Sass
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    MyHome Junior Frontend Developer 5d ago Contract USA only
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    CSS JavaScript
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    Loop Studios Software Engineer 1w ago Full Time Worldwide
-    <!-- Role -->
-    Fullstack
-    <!-- Level -->
-    Midweight
-    <!-- Languages -->
-    JavaScript Ruby
-    <!-- Tools -->
-    Sass
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    FaceIt Junior Backend Developer 2w ago Full Time UK only
-    <!-- Role -->
-    Backend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    Ruby
-    <!-- Tools -->
-    RoR
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    Shortly Junior Developer 2w ago Full Time Worldwide
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    HTML JavaScript
-    <!-- Tools -->
-    Sass
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    Insure Junior Frontend Developer 2w ago Full Time USA only
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    JavaScript
-    <!-- Tools -->
-    Vue Sass
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    Eyecam Co. Full Stack Engineer 3w ago Full Time Worldwide
-    <!-- Role -->
-    Fullstack
-    <!-- Level -->
-    Midweight
-    <!-- Languages -->
-    JavaScript Python
-    <!-- Tools -->
-    Django
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    The Air Filter Company Front-end Dev 1mo ago Part Time Worldwide
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    JavaScript
-    <!-- Tools -->
-    React Sass
-    <!-- Item End -->
-
+    <header>
+      <img class="header-img" src="/images/bg-header-mobile.svg" alt="" />
+      <section class="active-filters-container">
+        <div class="active-filters-all">
+          <div class="active-filter">
+            <span>Frontend</span>
+            <button class="remove-btn">
+              <img src="/images/icon-remove.svg" alt="" />
+            </button>
+          </div>
+          <div class="active-filter">
+            <span>CSS</span>
+            <button class="remove-btn">
+              <img src="/images/icon-remove.svg" alt="" />
+            </button>
+          </div>
+          <div class="active-filter">
+            <span>JavaScript</span>
+            <button class="remove-btn">
+              <img src="/images/icon-remove.svg" alt="" />
+            </button>
+          </div>
+        </div>
+        <button class="clear-btn">Clear</button>
+      </section>
+    </header>
+    <main>
+      <section class="single-job-container">
+        <img class="company-logo" src="/images/photosnap.svg" alt="" />
+        <div class="job-description">
+          <div class="main-info">
+            <h2 class="company-name">Photosnap</h2>
+            <span class="info-new">new!</span>
+            <span class="info-featured">featured</span>
+          </div>
+          <h3 class="job-position">Senior Frontend Developer</h3>
+          <div class="additional-info">
+            <span>1d ago</span>
+            <span>&middot;</span>
+            <span>Full Time</span>
+            <span>&middot;</span>
+            <span>USA only</span>
+          </div>
+        </div>
+        <div class="job-requirements">
+          <button>Frontend</button>
+          <button>Senior</button>
+          <button>HTML</button>
+          <button>CSS</button>
+          <button>JavaScript</button>
+        </div>
+      </section>
+      <section class="single-job-container">
+        <img class="company-logo" src="/images/photosnap.svg" alt="" />
+        <div class="job-description">
+          <div class="main-info">
+            <h2 class="company-name">Photosnap</h2>
+            <span class="info-new">new!</span>
+            <span class="info-featured">featured</span>
+          </div>
+          <h3 class="job-position">Senior Frontend Developer</h3>
+          <div class="additional-info">
+            <span>1d ago</span>
+            <span>&middot;</span>
+            <span>Full Time</span>
+            <span>&middot;</span>
+            <span>USA only</span>
+          </div>
+        </div>
+        <div class="job-requirements">
+          <button>Frontend</button>
+          <button>Senior</button>
+          <button>HTML</button>
+          <button>CSS</button>
+          <button>JavaScript</button>
+        </div>
+      </section>
+    </main>
     <footer>
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
