desktop design done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
   </head>
   <body>
     <header>
-      <img class="header-img" src="/images/bg-header-mobile.svg" alt="" />
+      <img
+        class="header-img-mobile"
+        src="/images/bg-header-mobile.svg"
+        alt=""
+      />
+      <img
+        class="header-img-desktop"
+        src="/images/bg-header-desktop.svg"
+        alt=""
+      />
       <section class="active-filters-container">
         <div class="active-filters-all">
           <div class="active-filter">
