--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
 
     <title>Frontend Mentor | Job Listings</title>
   </head>
@@ -26,32 +27,32 @@
         src="/images/bg-header-desktop.svg"
         alt=""
       />
-      <section class="active-filters-container">
-        <div class="active-filters-all">
-          <div class="active-filter">
+      <section class="filters-window hidden">
+        <div class="filters-container">
+          <!-- <div class="filter-single">
             <span>Frontend</span>
-            <button class="remove-btn">
+            <button class="btn-remove">
               <img src="/images/icon-remove.svg" alt="" />
             </button>
           </div>
-          <div class="active-filter">
+          <div class="filter-single">
             <span>CSS</span>
-            <button class="remove-btn">
+            <button class="btn-remove">
               <img src="/images/icon-remove.svg" alt="" />
             </button>
           </div>
-          <div class="active-filter">
+          <div class="filter-single">
             <span>JavaScript</span>
-            <button class="remove-btn">
+            <button class="btn-remove">
               <img src="/images/icon-remove.svg" alt="" />
             </button>
-          </div>
+          </div> -->
         </div>
-        <button class="clear-btn">Clear</button>
+        <button class="btn-clear">Clear</button>
       </section>
     </header>
-    <main>
-      <section class="single-job-container">
+    <main class="jobs-container">
+      <!-- <section class="single-job-container">
         <img class="company-logo" src="/images/photosnap.svg" alt="" />
         <div class="job-description">
           <div class="main-info">
@@ -100,7 +101,7 @@
           <button>CSS</button>
           <button>JavaScript</button>
         </div>
-      </section>
+      </section> -->
     </main>
     <footer>
       Challenge by
