--- a/index.html
+++ b/index.html
@@ -28,81 +28,11 @@
         alt=""
       />
       <section class="filters-window hidden">
-        <div class="filters-container">
-          <!-- <div class="filter-single">
-            <span>Frontend</span>
-            <button class="btn-remove">
-              <img src="/images/icon-remove.svg" alt="" />
-            </button>
-          </div>
-          <div class="filter-single">
-            <span>CSS</span>
-            <button class="btn-remove">
-              <img src="/images/icon-remove.svg" alt="" />
-            </button>
-          </div>
-          <div class="filter-single">
-            <span>JavaScript</span>
-            <button class="btn-remove">
-              <img src="/images/icon-remove.svg" alt="" />
-            </button>
-          </div> -->
-        </div>
+        <div class="filters-container"></div>
         <button class="btn-clear">Clear</button>
       </section>
     </header>
-    <main class="jobs-container">
-      <!-- <section class="single-job-container">
-        <img class="company-logo" src="/images/photosnap.svg" alt="" />
-        <div class="job-description">
-          <div class="main-info">
-            <h2 class="company-name">Photosnap</h2>
-            <span class="info-new">new!</span>
-            <span class="info-featured">featured</span>
-          </div>
-          <h3 class="job-position">Senior Frontend Developer</h3>
-          <div class="additional-info">
-            <span>1d ago</span>
-            <span>&middot;</span>
-            <span>Full Time</span>
-            <span>&middot;</span>
-            <span>USA only</span>
-          </div>
-        </div>
-        <div class="job-requirements">
-          <button>Frontend</button>
-          <button>Senior</button>
-          <button>HTML</button>
-          <button>CSS</button>
-          <button>JavaScript</button>
-        </div>
-      </section>
-      <section class="single-job-container">
-        <img class="company-logo" src="/images/photosnap.svg" alt="" />
-        <div class="job-description">
-          <div class="main-info">
-            <h2 class="company-name">Photosnap</h2>
-            <span class="info-new">new!</span>
-            <span class="info-featured">featured</span>
-          </div>
-          <h3 class="job-position">Senior Frontend Developer</h3>
-          <div class="additional-info">
-            <span>1d ago</span>
-            <span>&middot;</span>
-            <span>Full Time</span>
-            <span>&middot;</span>
-            <span>USA only</span>
-          </div>
-        </div>
-        <div class="job-requirements">
-          <button>Frontend</button>
-          <button>Senior</button>
-          <button>HTML</button>
-          <button>CSS</button>
-          <button>JavaScript</button>
-        </div>
-      </section> -->
-    </main>
+    <main class="jobs-container"></main>
     <footer>
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
